variables de entorno

--- a/.development.env
+++ b/.development.env
@@ -2,11 +2,11 @@
 PORT=3000
 
 #Config database
-DB_HOST=monorail.proxy.rlwy.net
-DB_PORT=51872
-DB_USER=root
-DB_PASSWORD=gBCcF2H-63E-24CG5A2a-aDaCf2fBG5a
-DB_NAME=railway
+MYSQLHOST=monorail.proxy.rlwy.net
+MYSQLPORT=51872
+MYSQLUSER=root
+MYSQL_ROOT_PASSWORD=gBCcF2H-63E-24CG5A2a-aDaCf2fBG5a
+MYSQLDATABASE=railway
 
 #Auth
 HASH_SALT=10
